--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "mongodb": "^2.2.11",
     "mongoose": "^4.6.5",
+    "request": "^2.76.0",
     "restify": "^4.2.0",
     "underscore": "^1.8.3"
   }
